# rehabilitation

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/rehabilitation/: fibonacci.h
tests/: CMakeLists.txt  fibonacci_test.cpp  rh_fibonacci.cpp
